[gd_scene load_steps=5 format=3 uid="uid://wuck8es2gu1j"]

[ext_resource type="Script" uid="uid://compnehywi7vg" path="res://red_duck.gd" id="1_dyqp1"]
[ext_resource type="Texture2D" uid="uid://b36mfxg0bgqjx" path="res://duckee_idle1.png" id="2_nvos6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qnceo"]
radius = 10.4403

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m0vno"]
height = 28.0

[node name="RedDuck" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
script = ExtResource("1_dyqp1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_nvos6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 6)
shape = SubResource("CircleShape2D_qnceo")

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
position = Vector2(-1, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_m0vno")

[node name="PointA" type="Marker2D" parent="."]
position = Vector2(128, 0)

[node name="PointB" type="Marker2D" parent="."]
position = Vector2(-190, 0)
